# straico

./: Cargo.toml  ag_prompt.txt  code_check_programmaticaly.md  lint_programaticaly.md
src/: api_response.rs  main.rs  moa.rs  payload.rs
