[package]
name = "straico"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
atty = "0.2.14"
cli-clipboard = "0.4.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
mockito = "1.5.0"
