[package]
name = "straico"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
cli-clipboard = "0.4.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.39.2", features = ["full"] }
